# Builddrone

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
example/: blueprint.json  main.py
example/filesystem/: blueprint.json  main.py
example/python/: blueprint.json  main.py  pyproject.toml  requirements.txt
example/robotframework/: blueprint.json
example/robotframework/tests/: example.robot
src/builddrone/: __main__.py  base_module.py  cli.py  drone_exception.py  engine.py  execution_engine.py  runner.py
src/builddrone/module/filesystem/: cleanup_module.py  copy_module.py
src/builddrone/module/python/: build_module.py  install_module.py  pylint_module.py  run_module.py  venv_module.py
src/builddrone/module/robotframework/: rebot_module.py  robotframework_base_module.py  test_module.py
tests/builddrone/: test_base_module.py  test_cli.py  test_drone_exception.py  test_execution_engine.py  test_runner.py
tests/builddrone/module/filesystem/: test_cleanup_module.py  test_copy_module.py
tests/builddrone/module/python/: test_build_module.py  test_install_module.py  test_pylint_module.py  test_run_module.py  test_venv_module.py
tests/builddrone/module/robotframework/: test_rebot_module.py  test_test_module.py
